--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://stageandsoundrentalco.github.io/Avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes/">https://stageandsoundrentalco.github.io/Avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes/</a><br>    
+                <a target="_bLank" href="https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes/index.html">https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes/index.html</a><br>
+                <a target="_bLank" href="https://avalonroofingservice-git-440128-stageandsoundrentalcos-projects.vercel.app/">https://avalonroofingservice-git-440128-stageandsoundrentalcos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://inquisitive-douhua-a4c8a7.netlify.app/">https://inquisitive-douhua-a4c8a7.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
